--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: alomrkload-4-3-0-1
+DATE: 04-17-2009
+STAFF:  sc
+CHANGES: cut and paste error in last tag - arghghgh
+
 TAG:  genetrapload-4-3-0-1
 DATE: 04-17-2009
 STAFF:  sc
