--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,10 @@
 TAG: alomrkload-4-3-0-4
+DATE: 04-22-2009
+STAFF:  sc
+CHANGES: used dlautils DLAJobstreamFunctions checkStatus, this
+ was missing from the template
+
+TAG: alomrkload-4-3-0-4
 TAG: alomrkload-4-3-0-3
 TAG: alomrkload-4-3-0-2
 TAG: alomrkload-4-3-0-1
