--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-4-3-0-6
+DATE: 04-24-2009
+STAFF:  jsb
+CHANGES:
+1) removed *py files from main directory; these were moved to /bin/
+
 TAG: alomrkload-4-3-0-5
 DATE: 04-22-2009
 STAFF:  sc
