--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-4-3-0-9
+DATE: 06-16-2009
+STAFF:  jsb
+CHANGES:
+1) bug fixes in dealing with molecular notes
+
 TAG: alomrkload-4-3-0-8
 DATE: 06-09-2009
 STAFF:  jsb
