--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-4-3-0-10
+DATE: 06-23-2009
+STAFF:  jsb
+CHANGES:
+1) removed quotes from molecular notes
+
 TAG: alomrkload-4-3-0-9
 DATE: 06-16-2009
 STAFF:  jsb
