--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: alomrkload-4-3-0-11
+DATE: 07-14-2009
+STAFF:  jsb
+CHANGES:
+1) widened window for overlap to 1000bp total
+2) now using only representative seq to look for marker overlap
+
 TAG: alomrkload-4-3-0-10
 DATE: 06-23-2009
 STAFF:  jsb
