--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-4-3-0-12
+DATE: 07-14-2009
+STAFF:  jsb
+CHANGES:
+1) fixed bug in note comparison
+
 TAG: alomrkload-4-3-0-11
 DATE: 07-14-2009
 STAFF:  jsb
