--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-4-3-0-13
+DATE: 07-15-2009
+STAFF:  jsb
+CHANGES:
+1) optimized load's use of bcp to not drop/create indexes for small data sets
+
 TAG: alomrkload-4-3-0-12
 DATE: 07-14-2009
 STAFF:  jsb
