--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-4-3-0-16
+DATE: 09-22-2009
+STAFF:  jsb
+CHANGES:
+1) removed sequence strand-flipping logic per TR9788
+
 TAG: alomrkload-4-3-0-15
 DATE: 08-31-2009
 STAFF:  jsb
