--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-4-3-1-0
+DATE: 10-16-2009
+STAFF:  jsb
+CHANGES:
+1) fixed bug in deletion of allele notes
+
 TAG: alomrkload-4-3-0-16
 DATE: 09-22-2009
 STAFF:  jsb
