--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-tr6839-BP
+DATE: 07/13/2010
+STAFF:  lec
+CHANGES:
+1) branch point tag for TR6839/marker types
+
 TAG: alomrkload-4-3-1-0
 DATE: 10-16-2009
 STAFF:  jsb
