--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-tr6839-1
+DATE: 07/14/2010
+STAFF:  lec
+CHANGES:
+1) TR6839/remove marker type 11
+
 TAG: alomrkload-tr6839-BP
 DATE: 07/13/2010
 STAFF:  lec
