--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: alomrkload-tr7106-BP
+DATE: 10/04/2012
+STAFF: sc
+CHANGES:
+1) Branch point for Build 38/CFAM
+
 TAG: alomrkload-5-0-0-1
 DATE: 07/10/2012
 STAFF: lec
