--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: alomrkload-6-0-4-?
+DATE: 05/03/2016
+STAFF: lec 
+CHANGES: TR12069/postgres cleanup
+1) convert to Git 
+2) fix mgi_notechunk code
+
 TAG: alomrkload-6-0-1-1
 DATE: 12/03/2015
 STAFF: lec
