--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: alomrkload-6-0-5-1
+DATE: 08/19/2016
+STAFF: lec 
+CHANGES: 
+bin/aloMarkerAssoc.py
+_Marker_Status_key = 3 is obsolete
+
 TAG: alomrkload-6-0-4-1
 DATE: 05/03/2016
 STAFF: lec 
