exclude withdrawn markers

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: alomrkload-6-0-16-2
+DATE: 03/23/2021
+STAFF: sc
+TR13349 - exclude withdrawn markers, discovered testing B39
+
 TAG: alomrkload-6-0-16-1
 DATE: 08/21/2020
 STAFF: lec
