wts2-767/mgi_notechunk/mgi_note merge

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: alomrkload-6-0-18-?
+DATE: 01/25/2022
+STAFF: lec
+wts2-767/mgi_notechunk/mgi_note merge
+
 TAG: alomrkload-6-0-16-3
 TAG: alomrkload-6-0-16-2
 DATE: 03/23/2021
